Fix body alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,10 @@
 html {
-  text-align: center;
   font-family: Helvetica;
 }
 
 h1, h2, h3 {
   font-weight: bold;
+  text-align: center;
 }
 
 h1 {
@@ -17,6 +17,10 @@ h2 {
 
 h3 {
   font-size: 23px;
+}
+
+h4, p {
+  text-align: center;
 }
 
 .flatiron {
